--- a/index.html
+++ b/index.html
@@ -1,61 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>GA4 Interactive Demo</title>
-
-  <!-- GA4 TAG (keep yours here) -->
-
+  <title>Myntra-like Demo</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header class="hero">
-  <h1>GA4 Interactive Demo</h1>
-  <p>Practice real Google Analytics 4 events</p>
-
-  <div class="buttons">
-    <button onclick="trackEvent('hero_primary_click')">Get Started</button>
-    <button class="secondary" onclick="trackEvent('hero_secondary_click')">Learn More</button>
-    <button class="ghost" onclick="trackEvent('hero_ghost_click')">Explore</button>
+<nav>
+  <div>Myntra Demo</div>
+  <div>
+    <a href="index.html">Home</a>
+    <a href="products.html">Products</a>
+    <a href="cart.html">Cart</a>
   </div>
-</header>
+</nav>
 
-<section class="features">
-  <h2>Why This Demo?</h2>
+<div class="container">
+  <h1>Shop by Category</h1>
+  <button onclick="goToProducts('Men')">Men</button>
+  <button onclick="goToProducts('Women')">Women</button>
+</div>
 
-  <div class="cards">
-    <div class="card" onclick="trackEvent('feature_click_analytics')">
-      <h3>Analytics</h3>
-      <p>Track real GA4 events</p>
-    </div>
+<script>
+function goToProducts(category){
+  localStorage.setItem("category", category);
+  window.location.href = "products.html";
+}
+</script>
 
-    <div class="card" onclick="trackEvent('feature_click_events')">
-      <h3>Events</h3>
-      <p>Buttons, scrolls, forms</p>
-    </div>
-
-    <div class="card" onclick="trackEvent('feature_click_learning')">
-      <h3>Learning</h3>
-      <p>Hands-on GA4 practice</p>
-    </div>
-  </div>
-</section>
-
-<section class="contact">
-  <h2>Contact Form</h2>
-
-  <form onsubmit="submitForm(event)">
-    <input type="text" placeholder="Your Name" required>
-    <input type="email" placeholder="Your Email" required>
-    <button type="submit">Submit</button>
-  </form>
-</section>
-
-<footer>
-  <p>GA4 Demo • Built with GitHub Pages</p>
-</footer>
-
-<script src="script.js"></script>
 </body>
 </html>
+
