--- a/product.html
+++ b/product.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Products</title>
+  <title>Product</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -9,36 +9,30 @@
 <nav>
   <div class="logo">MYNTRA</div>
   <div>
-    <a href="index.html">Home</a>
+    <a href="products.html">Back</a>
     <a href="cart.html">Cart</a>
   </div>
 </nav>
 
-<div class="container">
-  <h1 id="title"></h1><br>
-
-  <div class="products">
-    <div class="product-card" onclick="viewProduct(1,'T-Shirt',799)">
-      <div class="product-img"></div>
-      <div class="product-name">T-Shirt</div>
-      <div class="price">₹ <span>799</span></div>
-    </div>
-
-    <div class="product-card" onclick="viewProduct(2,'Jeans',1999)">
-      <div class="product-img"></div>
-      <div class="product-name">Jeans</div>
-      <div class="price">₹ <span>1999</span></div>
-    </div>
+<div class="container product-detail">
+  <div class="image"></div>
+  <div>
+    <h1 id="name"></h1>
+    <h2>₹ <span id="price"></span></h2>
+    <button class="add-btn" onclick="addToCart()">Add to Cart</button>
   </div>
 </div>
 
 <script>
-document.getElementById("title").innerText =
-  localStorage.getItem("category") + " Products";
+const product = JSON.parse(localStorage.getItem("product"));
+document.getElementById("name").innerText = product.name;
+document.getElementById("price").innerText = product.price;
 
-function viewProduct(id, name, price) {
-  localStorage.setItem("product", JSON.stringify({ id, name, price }));
-  window.location.href = "product.html";
+function addToCart() {
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+  cart.push(product);
+  localStorage.setItem("cart", JSON.stringify(cart));
+  alert("Added to cart");
 }
 </script>
 
