--- a/cart.html
+++ b/cart.html
@@ -15,6 +15,7 @@
 
 <div class="container">
   <h1>Your Cart</h1>
+
   <div id="cart"></div>
 
   <h2 style="margin-top:40px;">Customer Details</h2>
@@ -28,21 +29,49 @@
 </div>
 
 <script>
-const cart = JSON.parse(localStorage.getItem("cart")) || [];
-let html = "";
+let cart = JSON.parse(localStorage.getItem("cart")) || [];
 
-cart.forEach(item => {
-  html += `<div class="cart-item">${item.name} – ₹${item.price}</div>`;
-});
+function renderCart() {
+  const cartDiv = document.getElementById("cart");
 
-document.getElementById("cart").innerHTML =
-  html || "Your cart is empty";
+  if (cart.length === 0) {
+    cartDiv.innerHTML = "<p>Your cart is empty</p>";
+    return;
+  }
+
+  let html = "";
+
+  cart.forEach((item, index) => {
+    html += `
+      <div class="cart-item">
+        <strong>${item.name}</strong> – ₹${item.price}
+        <button 
+          style="float:right; background:none; border:none; color:#ff3f6c; cursor:pointer;"
+          onclick="removeItem(${index})">
+          Remove
+        </button>
+      </div>
+    `;
+  });
+
+  cartDiv.innerHTML = html;
+}
+
+function removeItem(index) {
+  cart.splice(index, 1);
+  localStorage.setItem("cart", JSON.stringify(cart));
+  renderCart();
+}
 
 function submitForm(e) {
   e.preventDefault();
   localStorage.setItem("order", JSON.stringify(cart));
+  localStorage.removeItem("cart");
   window.location.href = "thank-you.html";
 }
+
+// Initial render
+renderCart();
 </script>
 
 </body>
