--- a/product.html
+++ b/product.html
@@ -8,11 +8,16 @@
 
 <nav>
   <div class="logo">MYNTRA</div>
-  <div>
-    <a href="products.html">Back</a>
-    <a href="cart.html">Cart</a>
+
+  <div class="nav-links">
+    <a onclick="goToCategory('Men')">Men</a>
+    <a onclick="goToCategory('Women')">Women</a>
+    <a href="cart.html">
+      Cart <span id="cartCount" class="cart-badge">0</span>
+    </a>
   </div>
 </nav>
+
 
 <div class="container product-detail">
   <div class="image"></div>
