--- a/cart.html
+++ b/cart.html
@@ -8,10 +8,16 @@
 
 <nav>
   <div class="logo">MYNTRA</div>
-  <div>
-    <a href="index.html">Home</a>
+
+  <div class="nav-links">
+    <a onclick="goToCategory('Men')">Men</a>
+    <a onclick="goToCategory('Women')">Women</a>
+    <a href="cart.html">
+      Cart <span id="cartCount" class="cart-badge">0</span>
+    </a>
   </div>
 </nav>
+
 
 <div class="container">
   <h1>Your Cart</h1>
