--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ function goToProducts(category) {
   window.location.href = "products.html";
 }
 </script>
+<script src="script.js"></script>
 
 </body>
 </html>
