--- a/products.html
+++ b/products.html
@@ -46,6 +46,7 @@ function viewProduct(id,name,price){
   window.location.href = "product.html";
 }
 </script>
+<script src="script.js"></script>
 
 </body>
 </html>
